--- a/app/views/enforcement-listed-building/v1/grounds/groundA.html
+++ b/app/views/enforcement-listed-building/v1/grounds/groundA.html
@@ -38,7 +38,7 @@
         </label>
 
         <div class="govuk-inset-text">
-          Planning permission should be granted for the alleged breach in the enforcement notice.
+          That the building is not of special architectural or historic interest.
         </div>
 
         <p class="govuk-hint">
