--- a/app/views/enforcement-listed-building/v1/grounds/groundB.html
+++ b/app/views/enforcement-listed-building/v1/grounds/groundB.html
@@ -38,7 +38,7 @@
         </label>
 
         <div class="govuk-inset-text">
-           The alleged breach of planning permission has not happened.
+           That the matters alleged to constitute a contravention of section 9(1) or (2) have not occured.
         </div>
 
         <p class="govuk-hint">
