--- a/app/views/enforcement-listed-building/v1/grounds/groundC.html
+++ b/app/views/enforcement-listed-building/v1/grounds/groundC.html
@@ -38,7 +38,7 @@
         </label>
 
         <div class="govuk-inset-text">
-          The alleged breach does not require planning permission.
+          That those matters (if they occured) do not constitute such a contravention.
         </div>
 
         <p class="govuk-hint">
