--- a/app/views/enforcement-listed-building/v1/grounds/groundD.html
+++ b/app/views/enforcement-listed-building/v1/grounds/groundD.html
@@ -38,7 +38,7 @@
         </label>
 
         <div class="govuk-inset-text">
-          It’s too late for the local authority to serve the enforcement notice.
+          That works to the building were urgently necessary in the interests of safety or health or for the preservation of the building, that it was not practicable to secure safety or health or, as the case may be, the preservation of the building by works of repair or works for affording temporary support or shelter, and that the works carried out were limited to the minimum measures immediately necessary.
         </div>
 
         <p class="govuk-hint">
@@ -58,7 +58,7 @@
           </div>
 
         </div>
-        
+
 
         <div class="govuk-button-group">
 
