--- a/app/views/enforcement-listed-building/v1/grounds/groundE.html
+++ b/app/views/enforcement-listed-building/v1/grounds/groundE.html
@@ -38,7 +38,7 @@
         </label>
 
         <div class="govuk-inset-text">
-          Copies of the enforcement notice were not legally served to the right people.
+          That listed building consent ought to be granted for the works, or that any relevant condition of such consent which has been granted ought to be discharged, or different conditions substituted.
         </div>
 
         <p class="govuk-hint">
