--- a/app/views/enforcement-listed-building/v1/grounds/grounds.html
+++ b/app/views/enforcement-listed-building/v1/grounds/grounds.html
@@ -47,51 +47,38 @@
                 <input class="govuk-checkboxes__input" id="grounds-1" name="grounds-1" type="checkbox" value="groundA">
                 <label class="govuk-label govuk-checkboxes__label" for="grounds-1">
                   <!-- <span class="govuk-heading-s govuk-!-margin-bottom-0">Ground A</span> -->
-                  Ground A: Planning permission should be granted for the alleged breach in the enforcement notice.
+                  Ground A: That the building is not of special architectural or historic interest.
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="grounds-2" name="grounds-2" type="checkbox" value="groundB">
                 <label class="govuk-label govuk-checkboxes__label" for="grounds-2">
                   <!-- <span class="govuk-heading-s govuk-!-margin-bottom-0">Ground B</span> -->
-                  Ground B: The alleged breach of planning permission has not happened.
+                  Ground B: That the matters alleged to constitute a contravention of section 9(1) or (2) have not occured.
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="grounds-3" name="grounds-3" type="checkbox" value="groundC">
                 <label class="govuk-label govuk-checkboxes__label" for="grounds-3">
                   <!-- <span class="govuk-heading-s govuk-!-margin-bottom-0">Ground C</span> -->
-                  Ground C: The alleged breach does not require planning permission.
+                  Ground C: That those matters (if they occured) do not constitute such a contravention.
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="grounds-4" name="grounds-4" type="checkbox" value="groundD">
                 <label class="govuk-label govuk-checkboxes__label" for="grounds-4">
                   <!-- <span class="govuk-heading-s govuk-!-margin-bottom-0">Ground D</span> -->
-                  Ground D: It’s too late for the local authority to serve the enforcement notice.
+                  Ground D: That works to the building were urgently necessary in the interests of safety or health or for the preservation of the building, that it was not practicable to secure safety or health or, as the case may be, the preservation of the building by works of repair or works for affording temporary support or shelter, and that the works carried out were limited to the minimum measures immediately necessary.
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="grounds-5" name="grounds-5" type="checkbox" value="groundE">
                 <label class="govuk-label govuk-checkboxes__label" for="grounds-5">
                   <!-- <span class="govuk-heading-s govuk-!-margin-bottom-0">Ground E</span> -->
-                  Ground E: Copies of the enforcement notice were not legally served to the right people.
+                  Ground E: That listed building consent ought to be granted for the works, or that any relevant condition of such consent which has been granted ought to be discharged, or different conditions substituted.
                 </label>
               </div>
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="grounds-6" name="grounds-6" type="checkbox" value="groundF">
-                <label class="govuk-label govuk-checkboxes__label" for="grounds-6">
-                  <!-- <span class="govuk-heading-s govuk-!-margin-bottom-0">Ground F</span> -->
-                  Ground F: The steps to comply with the enforcement notice are excessive.
-                </label>
-              </div>
-              <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="grounds-7" name="grounds-7" type="checkbox" value="groundG">
-                <label class="govuk-label govuk-checkboxes__label" for="grounds-7">
-                  <!-- <span class="govuk-heading-s govuk-!-margin-bottom-0">Ground G</span> -->
-                  Ground G: I need more time to comply with the enforcement notice.
-                </label>
-              </div>
+                
             </div>
 
           </fieldset>
