--- a/app/views/enforcement-listed-building/v1/check-your-answers.html
+++ b/app/views/enforcement-listed-building/v1/check-your-answers.html
@@ -55,7 +55,7 @@
                 {% endif %}
 
               {% else %}
-                Nic Davies
+                Providence Produce Company
               {% endif %}
 
             </dd>
