--- a/app/views/enforcement-listed-building/v1/task-list.html
+++ b/app/views/enforcement-listed-building/v1/task-list.html
@@ -2,7 +2,7 @@
 
 {% extends "layout.html" %}
 
-{% set title = "Appeal an enforcement notice" %}
+{% set title = "Appeal a listed building enforcement notice" %}
 
 {% block pageTitle %}
   Appeal an enforcement notice task list - {{serviceName}} - GOV.UK
@@ -72,7 +72,7 @@
           <!-- contact details -->
           <li class="app-task-list__item">
             <span class="app-task-list__task-name">
-              <a href="named-on-notice/named-on-notice">
+              <a href="named-on-notice/named-on-notice" class="govuk-link--no-visited-state">
                 Tell us who is on the enforcement notice
               </a>
             </span>
@@ -88,7 +88,7 @@
 
           <li class="app-task-list__item">
             <span class="app-task-list__task-name">
-              <a href="listed-building/grade">
+              <a href="listed-building/grade" class="govuk-link--no-visited-state">
                 Tell us about the listed building
               </a>
             </span>
@@ -104,7 +104,7 @@
           <!-- appeal site -->
           <li class="app-task-list__item">
             <span class="app-task-list__task-name">
-              <a href="appeal-site/postcode-address">
+              <a href="appeal-site/postcode-address" class="govuk-link--no-visited-state">
                 Tell us about the appeal site
               </a>
             </span>
@@ -120,7 +120,7 @@
           <!-- grounds of appeal -->
           <li class="app-task-list__item">
             <span class="app-task-list__task-name">
-              <a href="grounds/grounds">
+              <a href="grounds/grounds" class="govuk-link--no-visited-state">
                 <!-- Choose your grounds of appeal -->
                 Choose your grounds of appeal
               </a>
@@ -138,7 +138,7 @@
           <!-- procedure type -->
           <li class="app-task-list__item">
             <span class="app-task-list__task-name">
-              <a href="procedure/procedure">
+              <a href="procedure/procedure" class="govuk-link--no-visited-state">
                 Tell us how you would prefer us to decide your appeal
               </a>
             </span>
@@ -154,7 +154,7 @@
           <!-- upload appeal documents -->
           <li class="app-task-list__item">
             <span class="app-task-list__task-name">
-              <a href="upload/enforcement-notice">
+              <a href="upload/enforcement-notice" class="govuk-link--no-visited-state">
                 Upload documents for your appeal
               </a>
             </span>
@@ -176,7 +176,7 @@
                 and data["enforcement-taskliststatus-appealdocuments"] == "Complete"
             %}
               <span class="app-task-list__task-name">
-                <a href="check-your-answers">
+                <a href="check-your-answers" class="govuk-link--no-visited-state">
                   Check your answers and submit your appeal
                 </a>
               </span>
