Removed the conf screen when removing a person or copmany

--- a/app/views/enforcement/v5/named-on-notice/added-names.html
+++ b/app/views/enforcement/v5/named-on-notice/added-names.html
@@ -53,7 +53,7 @@
               </a>
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="confirm-remove?entity=person">
+              <a class="govuk-link" href="#0">
                 Remove<span class="govuk-visually-hidden"> this person</span>
               </a>
             </dd>
@@ -83,7 +83,7 @@
               </a>
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="confirm-remove?entity=person">
+              <a class="govuk-link" href="#0">
                 Remove<span class="govuk-visually-hidden"> this person</span>
               </a>
             </dd>
@@ -106,7 +106,7 @@
               </a>
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="confirm-remove?entity=company">
+              <a class="govuk-link" href="#0">
                 Remove<span class="govuk-visually-hidden"> this company</span>
               </a>
             </dd>
