Updated your appeals

--- a/app/views/enforcement-statement/v1/return/index.html
+++ b/app/views/enforcement-statement/v1/return/index.html
@@ -29,15 +29,9 @@
           html: 'Continue'
         }) }}
 
-      </form>
+        <p><a href="#0">Not received the code?</a></p>
 
-      <div class="team-questions">
-        <ul class="govuk-list govuk-list--bullet">
-          <li>What data do we need to ask for here?</li>
-          <li>If the link in the email is a magic link do we need to ask them anything?</li>
-          <li>Is there a way to navigate to this without the email? For example, is there a return link on GOV.UK?</li>
-        </ul>
-      </div>
+      </form>
     </div>
   </div>
 {% endblock %}
