--- a/app/views/enforcement-statement/v1/update/confirmation.html
+++ b/app/views/enforcement-statement/v1/update/confirmation.html
@@ -16,6 +16,8 @@
 
       <p>We&rsquo;ll review your update and forward it to the local planning authority.</p>
 
+      <p>Your deadline to make changes to your appeal statement is 11.59pm on Monday {{ 35 | daysInFuture }}.</p>
+
     </div>
   </div>
 {% endblock %}
