--- a/app/views/enforcement/v6/grounds/reasons-d.html
+++ b/app/views/enforcement/v6/grounds/reasons-d.html
@@ -10,12 +10,15 @@
 {% block content %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+      <span class="govuk-caption-l">
+        Choose your grounds of appeal
+      </span>
       <h1 class="govuk-heading-l">
-        Ground G reasons
+        Ground D reasons
       </h1>
 
       {{ govukInsetText({
-        html: 'I need more time to comply with the enforcement notice.'
+        html: 'It&rsquo;s too late for the local authority to serve the enforcement notice.'
       }) }}
 
       <p>You do not need to repeat the local planning authority&rsquo;s reasons for issuing the enforcement notice.</p>
@@ -27,13 +30,13 @@
       <form method="post">
 
         {{ govukCharacterCount({
-          name: 'statement-ground-g',
-          id: 'statement-ground-g',
-          value: data['statement-ground-g'],
+          name: 'ground-d',
+          id: 'ground-d',
+          value: data['ground-d'],
           maxwords: '1000',
           rows: 15,
           label: {
-            html: 'What are your reasons for choosing Ground G?',
+            html: 'What are your reasons for choosing Ground D?',
             classes: 'govuk-label--m govuk-!-margin-top-6',
             isPageHeading: false
           }
