Updated index links

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -105,10 +105,25 @@ service-start{% extends "layout.html" %}
                       text: "Ready for UR"
                     }) }}
                     <h3 class="govuk-heading-s govuk-!-margin-bottom-3">
+                      Version 6 - grounds match statement designs
+                    </h3>
+                    <ul class="govuk-list govuk-list--bullet">
+                      <li><a href="/enforcement/v6/skip/appeal-start">Before you continue</a></li>
+                      <li><a href="/enforcement/v6/skip/tasks">Completed task list</a></li>
+                    </ul>
+                  </div>
+
+                  <div class="govuk-inset-text govuk-!-margin-top-0">
+                    {{ govukTag({
+                      classes: "govuk-tag--green govuk-!-margin-bottom-3",
+                      text: "Ready for UR"
+                    }) }}
+                    <h3 class="govuk-heading-s govuk-!-margin-bottom-3">
                       Enforcement appeal statement
                     </h3>
                     <ul class="govuk-list govuk-list--bullet">
                       <li><a href="/enforcement-statement/v1/appeal-submitted-email">Email: Appeal submitted</a></li>
+                      <li><a href="/enforcement-statement/v1/update/">Statement overview</a></li>
                     </ul>
                   </div>
 
