--- a/app/views/enforcement/v6/grounds/reasons-a.html
+++ b/app/views/enforcement/v6/grounds/reasons-a.html
@@ -42,9 +42,19 @@
           }
         }) }}
 
-        {{ govukButton({
-          text: 'Save and continue'
-        }) }}
+        <div class="govuk-button-group">
+
+          {{ govukButton({
+            text: "Save and continue"
+          }) }}
+
+          {{ govukButton({
+            href: "",
+            text: "Save and come back later",
+            classes: "govuk-button--secondary"
+          }) }}
+
+        </div>
 
       </form>
     </div>
