--- a/app/views/enforcement/v6/grounds/reasons-a.html
+++ b/app/views/enforcement/v6/grounds/reasons-a.html
@@ -14,7 +14,7 @@
         Choose your grounds of appeal
       </span>
       <h1 class="govuk-heading-l">
-        Ground A reasons
+        Your reasons for Ground A
       </h1>
 
       {{ govukInsetText({
