--- a/app/views/enforcement/v6/grounds/reasons-b.html
+++ b/app/views/enforcement/v6/grounds/reasons-b.html
@@ -14,7 +14,7 @@
         Choose your grounds of appeal
       </span>
       <h1 class="govuk-heading-l">
-        Ground B reasons
+        Your reasons for Ground B
       </h1>
 
       {{ govukInsetText({
