--- a/app/views/enforcement/v6/grounds/reasons-c.html
+++ b/app/views/enforcement/v6/grounds/reasons-c.html
@@ -14,7 +14,7 @@
         Choose your grounds of appeal
       </span>
       <h1 class="govuk-heading-l">
-        Ground C reasons
+        Your reasons for Ground C
       </h1>
 
       {{ govukInsetText({
