--- a/app/views/enforcement/v6/grounds/reasons-d.html
+++ b/app/views/enforcement/v6/grounds/reasons-d.html
@@ -14,7 +14,7 @@
         Choose your grounds of appeal
       </span>
       <h1 class="govuk-heading-l">
-        Ground D reasons
+        Your reasons for Ground D
       </h1>
 
       {{ govukInsetText({
