--- a/app/views/enforcement/v6/grounds/reasons-e.html
+++ b/app/views/enforcement/v6/grounds/reasons-e.html
@@ -14,7 +14,7 @@
         Choose your grounds of appeal
       </span>
       <h1 class="govuk-heading-l">
-        Ground E reasons
+        Your reasons for Ground E
       </h1>
 
       {{ govukInsetText({
