--- a/app/views/enforcement/v6/grounds/reasons-f.html
+++ b/app/views/enforcement/v6/grounds/reasons-f.html
@@ -14,7 +14,7 @@
         Choose your grounds of appeal
       </span>
       <h1 class="govuk-heading-l">
-        Ground F reasons
+        Your reasons for Ground F
       </h1>
 
       {{ govukInsetText({
