--- a/app/views/enforcement/v6/grounds/reasons-g.html
+++ b/app/views/enforcement/v6/grounds/reasons-g.html
@@ -14,7 +14,7 @@
         Choose your grounds of appeal
       </span>
       <h1 class="govuk-heading-l">
-        Ground G reasons
+        Your reasons for Ground G
       </h1>
 
       {{ govukInsetText({
