--- a/app/views/enforcement-statement/v1/update/reasons-d.html
+++ b/app/views/enforcement-statement/v1/update/reasons-d.html
@@ -11,7 +11,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
-        Ground D reasons
+        Your reasons for Ground D
       </h1>
 
       {{ govukInsetText({
