--- a/app/views/enforcement-statement/v1/update/reasons-g.html
+++ b/app/views/enforcement-statement/v1/update/reasons-g.html
@@ -11,7 +11,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
-        Ground G reasons
+        Your reasons for Ground G
       </h1>
 
       {{ govukInsetText({
