S&R added to enforcement appeal journey for UR

--- a/app/views/enforcement/v6/save-and-return/email-confirmed.html
+++ b/app/views/enforcement/v6/save-and-return/email-confirmed.html
@@ -43,7 +43,7 @@
       <div class="govuk-button-group">
 
         {{ govukButton({
-          href: "before-you-continuez",
+          href: "../before-you-continue",
           text: "Continue"
         }) }}
 
