--- a/app/views/index.html
+++ b/app/views/index.html
@@ -108,6 +108,7 @@ service-start{% extends "layout.html" %}
                       Version 6 - grounds match statement designs
                     </h3>
                     <ul class="govuk-list govuk-list--bullet">
+                      <li><a href="/enforcement/v6/save-and-return/what-is-your-email">What is your email address?</a></li>
                       <li><a href="/enforcement/v6/skip/appeal-start">Before you continue</a></li>
                       <li><a href="/enforcement/v6/skip/tasks">Completed task list</a></li>
                     </ul>
