Linking up enforcement appeal journey and appeal started letter

--- a/app/views/before-you-start/v12/check-answers.html
+++ b/app/views/before-you-start/v12/check-answers.html
@@ -25,7 +25,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form action="" method="post">
+      <form method="post">
 
         <h1 class="govuk-heading-l">
           You can appeal using this service
@@ -162,7 +162,7 @@
         </dl>
 
         {{ govukButton({
-          href: "/enforcement/v4/before-you-continue",
+          href: "/enforcement/v6/before-you-continue",
           text: "Continue to my appeal"
         }) }}
 
