--- a/app/views/enforcement-statement/v1/appeal-submitted-email.html
+++ b/app/views/enforcement-statement/v1/appeal-submitted-email.html
@@ -71,7 +71,11 @@
 
       <p>You can apply for costs if anyone involved in your appeal behaves unreasonably, for example missing deadlines. Costs can be awarded against you too. </p>
 
-      <p>((<a href="return/">url for statement journey</a>))</p>
+      <p>
+        <a href="return/">
+          Change or update your appeal statement
+        </a>
+      </p>
 
       <p>If you contact us about your appeal, you should quote  the appeal site address and post code. </p>
 
