--- a/app/views/enforcement/v6/confirmation.html
+++ b/app/views/enforcement/v6/confirmation.html
@@ -44,7 +44,16 @@
       </p>
 
     </div>
+
+  <!-- this is a prototype only link -->
+  <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-9 govuk-!-margin-top-9">
+    <p class="govuk-body-s pins-prototype-only">
+      <a href="../../enforcement-statement/v1/appeal-submitted-email">
+        Appeal started email
+      </a>
+    </p>
   </div>
+
+</div>
+
 {% endblock %}
-
-
