--- a/app/views/before-you-start/v12/check-answers.html
+++ b/app/views/before-you-start/v12/check-answers.html
@@ -105,12 +105,12 @@
               Effective date
             </dt>
             <dd class="govuk-summary-list__value">
-              {% if data["bys-v11-enforcementeffectivedate-day"] %}
-              {{ data["bys-v11-enforcementeffectivedate-day"] }}
-              {{ data["bys-v11-enforcementeffectivedate-month"] | formatMonth }}
-              {{ data["bys-v11-enforcementeffectivedate-year"] }}
+              {% if data["bys-enforcement-effective-date-day"] %}
+                {{ data["bys-enforcement-effective-date-day"] }}
+                {{ data["bys-enforcement-effective-date-month"] | formatMonth }}
+                {{ data["bys-enforcement-effective-date-year"] }}
               {% else %}
-                {{ 20 | daysInFuture }}
+                {{ 8 | daysAgo }}
               {% endif %}
 
             </dd>
@@ -121,19 +121,24 @@
             </dd>
           </div>
 
-          <div class="govuk-summary-list__row">
-            <dt class="govuk-summary-list__key">
-              Intent to appeal submitted
-            </dt>
-            <dd class="govuk-summary-list__value">
-              {{ data['enforcement-intent'] }}
-            </dd>
-            <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="notice-decision-date">
-                Change<span class="govuk-visually-hidden"> intent to appeal submitted</span>
-              </a>
-            </dd>
-          </div>
+          {% if data['enforcement-effective'] == "past" %}
+
+            <div class="govuk-summary-list__row">
+              <dt class="govuk-summary-list__key">
+                Intent to appeal submitted
+              </dt>
+              <dd class="govuk-summary-list__value">
+                {{ data['enforcement-intent'] }}
+              </dd>
+              <dd class="govuk-summary-list__actions">
+                <a class="govuk-link" href="notice-decision-date">
+                  Change<span class="govuk-visually-hidden"> intent to appeal submitted</span>
+                </a>
+              </dd>
+            </div>
+
+          {% endif %}
+
 
           {% if data['enforcement-intent'] == 'Yes' %}
 
