--- a/app/views/index.html
+++ b/app/views/index.html
@@ -898,6 +898,21 @@ service-start{% extends "layout.html" %}
 
                   <div class="govuk-inset-text govuk-!-margin-top-0">
                     {{ govukTag({
+                      classes: "govuk-tag--green govuk-!-margin-bottom-3",
+                      text: "Ready for UR"
+                    }) }}
+                    <h3 class="govuk-heading-s govuk-!-margin-bottom-3">
+                      Version 12
+                    </h3>
+                    <ul class="govuk-list govuk-list--bullet">
+                      <li>
+                        <a href="before-you-start/v12/">Start ‘Before you start’ (includes enforcement appeals)</a>
+                      </li>
+                    </ul>
+
+                  </div>
+                  <div class="govuk-inset-text govuk-!-margin-top-0">
+                    {{ govukTag({
                       classes: "govuk-tag--grey govuk-!-margin-bottom-3",
                       text: "Archived"
                     }) }}
