Enforcement appeal, more structure

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -149,7 +149,7 @@ service-start{% extends "layout.html" %}
                     }) }}
                     <h3 class="govuk-heading-s govuk-!-margin-bottom-3">
                       BYS version 12<br>
-                      Enforcement version 4 (BK version)
+                      Version 4 - BK edition (Have it your way)
                     </h3>
                     <ul class="govuk-list govuk-list--bullet">
                       <!-- <li><a href="/before-you-start/v11">Before you start</a></li> -->
