Enforcement table changes test

--- a/app/assets/sass/pins/tables.scss
+++ b/app/assets/sass/pins/tables.scss
@@ -5,3 +5,9 @@
 .pins-govuk-table__row--last td {
 	border-bottom: none;
 }
+
+.pins-table-divider {
+	margin-top:0;
+	margin-bottom: 1rem;
+	color: #0a0a0a;
+}
