--- a/app/views/enforcement/v7/procedure/procedure.html
+++ b/app/views/enforcement/v7/procedure/procedure.html
@@ -45,7 +45,7 @@
         },
         items: [
           {
-            value: "Written representations",
+            value: "Written",
             text: "Written representations",
             hint: {
               text: "For appeals where the issues are clear from written statements and a site visit. This is the quickest and most common way to make an appeal."
