--- a/app/views/enforcement/v7/check-your-answers.html
+++ b/app/views/enforcement/v7/check-your-answers.html
@@ -66,7 +66,7 @@
             </dd>
           </div>
 
-          <div class="govuk-summary-list__row">
+          <div class="govuk-summary-list__row pins-summary-list__row--last">
             <dt class="govuk-summary-list__key">
               Contact details
             </dt>
@@ -174,7 +174,7 @@
           </div>
 
           <!-- site interest -->
-          <div class="govuk-summary-list__row">
+          <div class="govuk-summary-list__row  pins-summary-list__row--last">
             <dt class="govuk-summary-list__key">
               Interest in the land or building
             </dt>
@@ -250,7 +250,7 @@
         <!-- grounds of appeal -->
         <h2 class="govuk-heading-l govuk-!-margin-top-0">Choose your grounds of appeal</h2>
 
-        <dl class="govuk-summary-list govuk-!-margin-bottom-6">
+        <dl class="govuk-summary-list govuk-!-margin-bottom-0">
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
               Grounds of appeal
@@ -522,56 +522,37 @@
 
           {% endif %}
 
-          {% set files %}
-            <ul class="govuk-list govuk-list--bullet">
+          <!-- if there was an application -->
+          <dl class="govuk-summary-list govuk-!-margin-bottom-0">
 
-              {% for file in data['statement-supporting-docs'] %}
-                <li>{{ file }}</li>
-              {% endfor %}
+            <div class="govuk-summary-list__row pins-summary-list__row--last">
+              <dt class="govuk-summary-list__key">
+                Supporting documents added
+              </dt>
+              <dd class="govuk-summary-list__value">
+                {{ data['supporting-check'] or 'No' }}
+              </dd>
+              <dd class="govuk-summary-list__actions">
+                <a class="govuk-link" href="javascript:preventDefault();">
+                  Change<span class="govuk-visually-hidden"> supporting documents</span>
+                </a>
+              </dd>
+            </div>
 
-            </ul>
-          {% endset -%}
+            {% if data["supporting-check"] == "Yes" %}
 
-          {{ govukSummaryList({
-            classes: 'govuk-!-margin-bottom-0',
-            rows: [
-              {
-                key: {
-                  text: 'Add supporting documents'
-                },
-                value: {
-                  html: data['supporting-check'] or 'No'
-                },
-                actions: {
-                  items: [
-                    {
-                      href: '#0',
-                      text: 'Change'
-                    }
-                  ]
-                }
-              },
-              {
-                key: {
-                  text: 'Supporting documents'
-                },
-                value: {
-                  html: files
-                },
-                actions: {
-                  items: [
-                    {
-                      href: '#0',
-                      text: 'Change'
-                    }
-                  ]
-                }
-              } if data['supporting-check'] == 'Yes'
-            ]
-          }) }}
+              <ul class="govuk-list govuk-list--bullet">
 
+                {% for file in data['statement-supporting-docs'] %}
+                  <li>{{ file }}</li>
+                {% endfor %}
 
+              </ul>
 
+            {% endif %}
+          </dl>
+
+          <hr class="pins-table-divider">
 
           <!-- if there was an application -->
           <dl class="govuk-summary-list">
@@ -633,7 +614,7 @@
 
           <!-- if ground a, show fees answer -->
           {% if data['grounds-1'] %}
-            <div class="govuk-summary-list__row">
+            <div class="govuk-summary-list__row  pins-summary-list__row--last">
               <dt class="govuk-summary-list__key">
                 Fee paid for the same development
               </dt>
@@ -654,7 +635,11 @@
         <h2 class="govuk-heading-l govuk-!-margin-top-9">Tell us how you would prefer us to decide your appeal</h2>
 
         <dl class="govuk-summary-list">
-          <div class="govuk-summary-list__row">
+          {% if data['enforcement-procedure'] == "Written" %}
+            <div class="govuk-summary-list__row pins-summary-list__row--last">
+          {% else %}
+            <div class="govuk-summary-list__row">
+          {% endif %}
             <dt class="govuk-summary-list__key">
               How would you prefer us to decide your appeal?
             </dt>
@@ -772,7 +757,7 @@
           </div>
 
           <!-- planning obligation -->
-          <div class="govuk-summary-list__row">
+          <div class="govuk-summary-list__row  pins-summary-list__row--last">
             <dt class="govuk-summary-list__key">
               Do you plan to submit a planning obligation?
             </dt>
